[package]
name = "bok"
version = "0.1.0"
edition = "2024"
description = "A git-inspired command-line tool for local accounting."
license = "MIT"
repository = "https://github.com/dtennander/bok"
homepage = "https://github.com/dtennander/bok"
documentation = "https://docs.rs/bok"
readme = "README.md"
keywords = ["ledger", "finance", "cli", "accounting"]
categories = ["command-line-utilities", "finance"]

[dependencies]
chrono = "0.4.41"
clap = { version = "4.5.40", features = ["derive"] }
hex = "0.4.3"
sha2 = "0.10.9"

[dev-dependencies]
quickcheck = "1.0.3"
quickcheck_macros = "1.1.0"
